--- a/client_web_app/src/App.css
+++ b/client_web_app/src/App.css
@@ -9,6 +9,7 @@
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  font-size: small;
 }
 
 .fileTable td, .fileTable th {
@@ -26,4 +27,11 @@
   text-align: left;
   background-color: #04AA6D;
   color: white;
+}
+.deleteBtn{
+  color: white;
+  background-color: #f44336;
+}
+.tableContainer{
+  overflow-x:auto;
 }
